feat: init database, liquibase setup

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	
+	// PostgreSQL driver
+	runtimeOnly 'org.postgresql:postgresql'
+	
+	// Liquibase for database migrations
+	implementation 'org.liquibase:liquibase-core'
+	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
