--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # Liquibase Configuration
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
+
+# JWT Configuration
+jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long-for-hs256-algorithm-please-change-in-production
+jwt.expiration=86400000
+jwt.refresh-expiration=604800000
