--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,4 +3,6 @@ databaseChangeLog:
       file: db/changelog/changes/001-initial-schema.sql
   - include:
       file: db/changelog/changes/002-create-users-table.sql
+  - include:
+      file: db/changelog/changes/003-create-refresh-tokens-table.sql
 
