--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ spring.liquibase.enabled=true
 jwt.secret=your-256-bit-secret-key-must-be-at-least-32-characters-long-for-hs256-algorithm-please-change-in-production
 jwt.expiration=86400000
 jwt.refresh-expiration=604800000
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=apacheclone15@gmail.com
+spring.mail.password=yakf zqev ikwv dmng
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
