--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,4 +7,6 @@ databaseChangeLog:
       file: db/changelog/changes/003-create-refresh-tokens-table.sql
   - include:
       file: db/changelog/changes/004-drop-refresh-tokens-table.sql
+  - include:
+      file: db/changelog/changes/005-create-password-reset-otp-table.sql
 
