--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,4 +15,8 @@ databaseChangeLog:
       file: db/changelog/changes/007-create-room-members-table.sql
   - include:
       file: db/changelog/changes/008-allow-null-description-password-rooms.sql
+  - include:
+      file: db/changelog/changes/009-create-match-tables.sql
+  - include:
+      file: db/changelog/changes/010-rename-un-trained-troops-column.sql
 
