--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -27,4 +27,8 @@ databaseChangeLog:
       file: db/changelog/changes/013-complete-tx-id-sequence-setup.sql
   - include:
       file: db/changelog/changes/014-set-match-event-tx-default.sql
+  - include:
+      file: db/changelog/changes/015-add-match-room-unique-constraint.sql
+  - include:
+      file: db/changelog/changes/016-match-detail-kingdom-cascade.sql
 
